[gd_scene load_steps=2 format=3 uid="uid://cqow47bch5ocs"]

[ext_resource type="Script" uid="uid://c65niyst5g33" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 1151.0
offset_bottom = 647.0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Would You Rather: Monster's Gamble!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "You are presented with a difficult choice..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TXT_PROMPT" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Loading . . ."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BTN_GIANT" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fight Giant"

[node name="BTN_SWARM" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fight Swarm"

[node name="TXT_RESULT" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="BTN_RETRY" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Play Again!"

[node name="TXT_Player_HEALTH" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Player Health"
vertical_alignment = 2

[node name="HEALTH_PLAYER" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="TXT_Monster_HEALTH" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Monster Health"
vertical_alignment = 2

[node name="HEALTH_MONSTER" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/BTN_GIANT" to="." method="_on_btn_giant_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/BTN_SWARM" to="." method="_on_btn_swarm_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/BTN_RETRY" to="." method="_on_btn_retry_pressed"]
